# colimail

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_claude.md  ARCHITECTURE_claude_thinking.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOGGING.md  NOTIFICATION_POSITION_TEST.md  OAUTH2_SETUP.md  QUICK_RELEASE_GUIDE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  SECURITY.md  architecture_overview_gpt.md  copilot_rules.md  development_requirements.md  log-viewer.html  package-lock.json  package.json  vite.config.js
src-tauri/: .gitignore  Cargo.toml  colimail.key.pub  oauth2_credentials.json.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachment_limits.rs  db.rs  encryption.rs  idle_manager.rs  logger.rs  main.rs  models.rs  oauth2_config.rs  security.rs
src-tauri/src/cmvh/: cache.rs  canonicalize.rs  mime.rs  mod.rs  parser.rs  signer.rs  types.rs  verifier.rs
src-tauri/src/commands/: accounts.rs  auth.rs  cmvh.rs  detect_display_name.rs  drafts.rs  emails.rs  encryption_manager.rs  ens.rs  folders.rs  logs.rs  mod.rs  notifications.rs  oauth2.rs  send.rs  send_cmvh.rs  test_connection.rs  utils.rs
src-tauri/src/commands/emails/: attachments.rs  cache.rs  codec.rs  delete.rs  fetch.rs  fetch_bodystructure.rs  flags.rs  imap_helpers.rs  mod.rs  sync.rs  sync_interval.rs
src-tauri/src/commands/emails/fetch/: body.rs  headers.rs  list.rs  mod.rs
src-tauri/src/ens/: cache.rs  mod.rs
src-tauri/src/idle_manager/: manager.rs  mod.rs  notification.rs  session.rs  types.rs
(+95 files in other folders)
