[package]
name = "colimail"
version = "0.4.0"
description = "Colimail - A Lightweight Email Client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "colimail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
native-tls = "0.2"
directories = "5.0"
mail-parser = "0.11.1"
html-escape = "0.2"
lazy_static = "1.5"

tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
imap = "3.0.0-alpha.15"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
oauth2 = "5.0.0"
url = "2.5"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-shell = "2"
chrono = "0.4"
once_cell = "1.19"
utf7-imap = "0.2"
encoding_rs = "0.8"
urlencoding = "2.1"
keyring = { version = "3.6", features = ["windows-native"] }
aes-gcm = "0.10"
base64 = "0.22"
imap-proto = "0.16.4"

